<resources>
    <string name="main_app_name">main app</string>
    <string name="main_home">首页</string>
    <string name="main_video">视频</string>
    <string name="main_person">我的</string>

    <string name="main_prompt_username">用户名</string>
    <string name="main_prompt_password">密码</string>
    <string name="main_action_sign_in_short">Sign in</string>

    <string name="main_login">登录</string>
    <string name="main_login_success">登录成功</string>
    <string name="main_login_failed">登录失败</string>
    <string name="main_register">注册</string>
    <string name="main_register_success">注册成功</string>
    <string name="main_register_failed">注册失败</string>
    <string name="main_username_cannot_null">用户名不能为空</string>
    <string name="main_password_cannot_null">密码不能为空</string>
    <string name="main_password_cannot_too_short">密码长度不能小于6位</string>
</resources>
