<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:padding="@dimen/main_padding_40"
    tools:context=".LoginActivity">

   <androidx.appcompat.widget.AppCompatImageView
       android:layout_width="@dimen/main_dp_64"
       android:layout_height="@dimen/main_dp_64"
       android:layout_above="@id/username_layout"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="@dimen/main_dp_32"
       app:srcCompat="@drawable/ic_action_account_circle"
       tools:ignore = "ContentDescription"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/username_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@id/password_layout"
       android:orientation="horizontal"
       app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">
       <!--
          android:text="bigone"
       -->
       <EditText
           android:id="@+id/username_et"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/main_prompt_username"
           android:maxLines="1"
           android:singleLine="true"/>
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/password_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">
       <!--
          android:text="1234567"
       -->
       <EditText
           android:id="@+id/password_et"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/main_prompt_password"
           android:imeActionId="6"
           android:imeActionLabel="@string/main_action_sign_in_short"
           android:imeOptions="actionUnspecified"
           android:inputType="textPassword"
           android:maxLines="1"
           android:singleLine="true"/>
   </com.google.android.material.textfield.TextInputLayout>

   <TableRow
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_below="@id/password_layout"
       android:layout_marginTop="@dimen/main_dp_16">

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/register_btn"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           style="?android:textAppearanceSmall"
           android:text="@string/main_register"
           android:gravity="center"
           android:textStyle="bold"/>

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/login_btn"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           style="?android:textAppearanceSmall"
           android:text="@string/main_login"
           android:gravity="center"
           android:textStyle="bold"/>
   </TableRow>

   <ProgressBar
       android:id="@+id/login_progressbar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       style="@style/Base.Widget.AppCompat.ProgressBar"
       android:layout_centerVertical="true"
       android:layout_centerHorizontal="true"
       android:visibility="gone"/>

   <androidx.appcompat.widget.AppCompatImageView
       android:id="@+id/login_exit_iv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentTop="true"
       android:layout_marginTop="@dimen/main_dp_40"
       app:srcCompat="@drawable/ic_close_black_24dp"
       tools:ignore="ContentDescription"/>
</RelativeLayout>